--- a/templates/shortcodes/rating.html
+++ b/templates/shortcodes/rating.html
@@ -1,45 +1,42 @@
 <table class="rating-table">
     <tr>
         <td>
-            <h2>Print Quality <div class="star-ratings-css">
-                    <div class="star-ratings-css-top" id="quality">
-                        <span>★</span><span>★</span><span>★</span><span>★</span><span>★</span></div>
-                    <div class="star-ratings-css-bottom">
-                        <span>★</span><span>★</span><span>★</span><span>★</span><span>★</span></div>
-                </div>
-            </h2>
+            <h2>Print Quality</h2>
+            <div class="star-ratings-css">
+                <div class="star-ratings-css-top" id="quality">
+                    <span>★</span><span>★</span><span>★</span><span>★</span><span>★</span></div>
+                <div class="star-ratings-css-bottom">
+                    <span>★</span><span>★</span><span>★</span><span>★</span><span>★</span></div>
+            </div>
         </td>
         <td>
-            <h2>Speed
-                <div class="star-ratings-css">
-                    <div class="star-ratings-css-top" id="speed">
-                        <span>★</span><span>★</span><span>★</span><span>★</span><span>★</span></div>
-                    <div class="star-ratings-css-bottom">
-                        <span>★</span><span>★</span><span>★</span><span>★</span><span>★</span></div>
-                </div>
-            </h2>
+            <h2>Speed</h2>
+            <div class="star-ratings-css">
+                <div class="star-ratings-css-top" id="speed">
+                    <span>★</span><span>★</span><span>★</span><span>★</span><span>★</span></div>
+                <div class="star-ratings-css-bottom">
+                    <span>★</span><span>★</span><span>★</span><span>★</span><span>★</span></div>
+            </div>
         </td>
     </tr>
     <tr>
         <td>
-            <h2>Communication
-                <div class="star-ratings-css">
-                    <div class="star-ratings-css-top" id="comm">
-                        <span>★</span><span>★</span><span>★</span><span>★</span><span>★</span></div>
-                    <div class="star-ratings-css-bottom">
-                        <span>★</span><span>★</span><span>★</span><span>★</span><span>★</span></div>
-                </div>
-            </h2>
+            <h2>Communication</h2>
+            <div class="star-ratings-css">
+                <div class="star-ratings-css-top" id="comm">
+                    <span>★</span><span>★</span><span>★</span><span>★</span><span>★</span></div>
+                <div class="star-ratings-css-bottom">
+                    <span>★</span><span>★</span><span>★</span><span>★</span><span>★</span></div>
+            </div>
         </td>
         <td>
-            <h2>Service
-                <div class="star-ratings-css">
-                    <div class="star-ratings-css-top" id="service">
-                        <span>★</span><span>★</span><span>★</span><span>★</span><span>★</span></div>
-                    <div class="star-ratings-css-bottom">
-                        <span>★</span><span>★</span><span>★</span><span>★</span><span>★</span></div>
-                </div>
-            </h2>
+            <h2>Service</h2>
+            <div class="star-ratings-css">
+                <div class="star-ratings-css-top" id="service">
+                    <span>★</span><span>★</span><span>★</span><span>★</span><span>★</span></div>
+                <div class="star-ratings-css-bottom">
+                    <span>★</span><span>★</span><span>★</span><span>★</span><span>★</span></div>
+            </div>
         </td>
     </tr>
 </table>
