--- a/templates/shortcodes/rating.html
+++ b/templates/shortcodes/rating.html
@@ -8,6 +8,7 @@
                 <div class="star-ratings-css-bottom">
                     <span>★</span><span>★</span><span>★</span><span>★</span><span>★</span></div>
             </div>
+            <div id="quality-score"></div>
         </td>
         <td>
             <h2>Speed</h2>
@@ -17,6 +18,7 @@
                 <div class="star-ratings-css-bottom">
                     <span>★</span><span>★</span><span>★</span><span>★</span><span>★</span></div>
             </div>
+            <div id="speed-score"></div>
         </td>
     </tr>
     <tr>
@@ -28,6 +30,7 @@
                 <div class="star-ratings-css-bottom">
                     <span>★</span><span>★</span><span>★</span><span>★</span><span>★</span></div>
             </div>
+            <div id="comm-score"></div>
         </td>
         <td>
             <h2>Service</h2>
@@ -37,6 +40,7 @@
                 <div class="star-ratings-css-bottom">
                     <span>★</span><span>★</span><span>★</span><span>★</span><span>★</span></div>
             </div>
+            <div id="service-score"></div>
         </td>
     </tr>
 </table>
