--- a/templates/shortcodes/image.html
+++ b/templates/shortcodes/image.html
@@ -1,15 +1,15 @@
 <div>
 	<figure>
 		<a href="{{ src }}">
-			<img class="lazy" data-src="{{ src }}?s=960">
+			<img class="lazy" data-src="https://imagecdn.app/v2/image/https://ramonimbao.github.io{{ src }}?width=960">
 			<noscript>
-				<img src="{{ src }}?s=960">
+				<img src="https://imagecdn.app/v2/image/https://ramonimbao.github.io{{ src }}?width=960>
 			</noscript>
 		</a>
 
 		{% if description %}
 		<figcaption>
-			{% if link %}<a href="{{ link }}">{% endif %}
+			{% if link %}<a href=" {{ link }}">{% endif %}
 				{{ description }}
 				{% if link %}</a>{% endif %}
 		</figcaption>
