--- a/templates/shortcodes/bigimage.html
+++ b/templates/shortcodes/bigimage.html
@@ -1,9 +1,9 @@
 <div>
 	<figure>
 		<a href="{{ src }}">
-			<img class="lazy" data-src="https://imagecdn.app/v2/image/https://ramonimbao.github.io{{ src }}?width=960">
+			<img class="lazy" data-src="https://imagecdn.app/v2/image/https://rmi-kb.com{{ src }}?width=960">
 			<noscript>
-				<img src="https://imagecdn.app/v2/image/https://ramonimbao.github.io{{ src }}?width=960">
+				<img src="https://imagecdn.app/v2/image/https://rmi-kb.com{{ src }}?width=960">
 			</noscript>
 		</a>
 
