--- a/templates/shortcodes/imgur.html
+++ b/templates/shortcodes/imgur.html
@@ -1,6 +1,6 @@
 <div>
 	<figure>
-		<a href="https://i.imgur.com/{{ id }}.jpg">
+		<a href="https://i.imgur.com/{{ id }}.jpg" target="_blank">
 			<img class="lazy" data-src="https://i.imgur.com/{{ id }}l.jpg">
 			<noscript>
 				<img src="https://i.imgur.com/{{ id }}l.jpg">
