--- a/templates/shortcodes/imgur.html
+++ b/templates/shortcodes/imgur.html
@@ -9,7 +9,7 @@
 
 		{% if description %}
 		<figcaption>
-			{% if link %}<a href="{{ link }}">{% endif %}
+			{% if link %}<a href="{{ link }}" target="_blank">{% endif %}
 				{{ description }}
 				{% if link %}</a>{% endif %}
 		</figcaption>
